--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <tbody>
 <tr>
 <td>
-<table align="center" border="0" cellpadding="0" cellspacing="0" class="row-content stack" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-image: url('images/ASE_ENERGY-SORTIE_DU_NOUVEAU_SITE_ASE_ENERGY-01-09-23-FB_V23x.png'); background-repeat: no-repeat; background-size: cover; color: #000; width: 795px; margin: 0 auto;" width="795">
+<table align="center" border="0" cellpadding="0" cellspacing="0" class="row-content stack" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-image: url('images/ASE_ENERGY-SORTIE_DU_NOUVEAU_SITE_ASE_ENERGY-01-09-23-FB_V23x.png'); background-repeat: no-repeat; background-size: cover; color: #000; width: 795px; margin: 0 auto;background-position-x: right;" width="795">
 <tbody>
 <tr>
 <td class="column column-1" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;" width="100%">
@@ -158,7 +158,7 @@
 <table border="0" cellpadding="0" cellspacing="0" class="image_block block-11" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad" style="padding-left:15px;width:100%;padding-right:0px;">
-<div align="left" class="alignment" style="line-height:10px"><img src="images/1.png" style="display: block; height: auto; border: 0; max-width: 199px; width: 100%;border-radius: 100px;border: 3px solid #FFFFFF;" width="199"/></div>
+<div align="left" class="alignment" style="line-height:10px"><img src="images/1.png" style="display: block; height: auto; border: 0; max-width: 280px; width: 100%;border-radius: 100%;border: 3px solid #FFFFFF;" width="280"/></div>
 </td>
 </tr>
 </table>
