--- a/theme_halloween.html
+++ b/theme_halloween.html
@@ -82,6 +82,12 @@
 				max-height: none !important;
 			}
 		}
+
+		@media(max-width: 635px){
+			div>img{
+				opacity: 0;
+			}
+		}
 	</style>
 </head>
 <body style="background-color: #fff; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
@@ -151,6 +157,13 @@
 <div align="left" class="alignment"><!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:32px;width:203px;v-text-anchor:middle;" arcsize="32%" strokeweight="1.5pt" strokecolor="#FFFFFF" fill="false"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:'Trebuchet MS', Tahoma, sans-serif; font-size:14px"><![endif]-->
 <div style="text-decoration:none;display:inline-block;color:#ffffff;background-color:transparent;border-radius:10px;width:auto;border-top:2px solid #FFFFFF;font-weight:400;border-right:2px solid #FFFFFF;border-bottom:2px solid #FFFFFF;border-left:2px solid #FFFFFF;padding-top:0px;padding-bottom:0px;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-size:14px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:10px;padding-right:0px;font-size:14px;display:inline-block;letter-spacing:normal;"><span style="word-break: break-word; line-height: 28px;">AVEC LE CODE <strong style="color: #175a98;background-color: #ffffff;font-size: 18px;padding-left: 8px;padding-right: 8px;padding-bottom: 4px;padding-top: 4px;border-top-right-radius: 6px;border-bottom-right-radius: 6px;">HALLOWEEN</strong></span></span></div><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 </div>
+</td>
+</tr>
+</table>
+<table border="0" cellpadding="0" cellspacing="0" class="heading_block block-8" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
+<tr>
+<td class="pad" style="padding-left:20px;padding-right:0px;text-align:center;width:100%;">
+<h3 style="margin: 0; color: #ffffff; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 14px; font-weight: 400; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;"><span class="tinyMce-placeholder">*Code valable jusqu'au 10/11 inclus</span></h3>
 </td>
 </tr>
 </table>
