--- a/theme_halloween.html
+++ b/theme_halloween.html
@@ -81,11 +81,31 @@
 				display: table !important;
 				max-height: none !important;
 			}
-		}
 
-		@media(max-width: 635px){
 			div>img{
 				opacity: 0;
+				height: 100px!important;
+			}
+
+			.image-mobile{
+				background-image: url('images/ASE ENERGY-SORTIE DU NOUVEAU SITE ASE ENERGY-01-09-23-FB_V2-mobile.png')!important;
+			}
+
+			.mobile-center{
+				text-align: center!important;
+			}
+
+			.padding-five{
+				padding-top: 105px!important;
+			}
+		}
+		@media (max-width:768px) {
+			.text-top-orange-bg{
+				font-size: 24px!important;
+			}
+
+			.text-top-desc{
+				font-size: 18px!important;
 			}
 		}
 	</style>
@@ -99,7 +119,7 @@
 <tbody>
 <tr>
 <td>
-<table align="center" border="0" cellpadding="0" cellspacing="0" class="row-content stack" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-image: url('images/ASE_ENERGY-SORTIE_DU_NOUVEAU_SITE_ASE_ENERGY-01-09-23-FB_V23x_halloween.png'); background-repeat: no-repeat; background-size: cover; color: #000; width: 795px; margin: 0 auto;background-position-x: right;" width="795">
+<table align="center" border="0" cellpadding="0" cellspacing="0" class="row-content stack image-mobile" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-image: url('images/ASE_ENERGY-SORTIE_DU_NOUVEAU_SITE_ASE_ENERGY-01-09-23-FB_V23x_halloween.png'); background-repeat: no-repeat; background-size: cover; color: #000; width: 795px; margin: 0 auto;background-position-x: right;" width="795">
 <tbody>
 <tr>
 <td class="column column-1" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;" width="100%">
@@ -107,7 +127,7 @@
 <tr>
 <td class="pad">
 <div align="center" class="alignment"><!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:51px;width:533px;v-text-anchor:middle;" arcsize="34%" stroke="false" fillcolor="#94c11f"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:'Trebuchet MS', Tahoma, sans-serif; font-size:36px"><![endif]-->
-<div style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#ec8d04;border-radius:17px;width:auto;border-top:0px solid transparent;font-weight:700;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:4px;padding-bottom:4px;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-size:36px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:40px;padding-right:40px;font-size:36px;display:inline-block;letter-spacing:normal;"><span style="word-break: break-word; line-height: 43.2px;">LE TOUT NOUVEAU SITE</span></span></div><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
+<div style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#ec8d04;border-radius:17px;width:auto;border-top:0px solid transparent;font-weight:700;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:4px;padding-bottom:4px;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-size:36px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:40px;padding-right:40px;font-size:36px;display:inline-block;letter-spacing:normal;" class="text-top-orange-bg"><span style="word-break: break-word; line-height: 43.2px;">LE TOUT NOUVEAU SITE</span></span></div><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 </div>
 </td>
 </tr>
@@ -115,30 +135,30 @@
 <table border="0" cellpadding="5" cellspacing="0" class="heading_block block-2" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad">
-<h2 style="margin: 0; color: #005093; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 24px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;"><span class="tinyMce-placeholder">ASE-ANERGY EST ARRIVE</span></h2>
+<h2 style="margin: 0; color: #005093; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 24px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;" class="text-top-desc"><span class="tinyMce-placeholder">ASE-ANERGY EST ARRIVE</span></h2>
 </td>
 </tr>
 </table>
 <table border="0" cellpadding="0" cellspacing="0" class="heading_block block-3" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad" style="text-align:center;width:100%;">
-<h3 style="margin: 0; color: #1baae2; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 20px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;"><span class="tinyMce-placeholder">PLUS RAPIDE, PLUS INTELLIGENT,</span></h3>
+<h3 style="margin: 0; color: #1baae2; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 20px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;" class="text-top-desc"><span class="tinyMce-placeholder">PLUS RAPIDE, PLUS INTELLIGENT,</span></h3>
 </td>
 </tr>
 </table>
 <table border="0" cellpadding="0" cellspacing="0" class="heading_block block-4" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad" style="text-align:center;width:100%;">
-<h3 style="margin: 0; color: #1baae2; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 20px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;">PLUS SOLAIRE QUE JAMAIS !</h3>
+<h3 style="margin: 0; color: #1baae2; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 20px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;" class="text-top-desc">PLUS SOLAIRE QUE JAMAIS !</h3>
 </td>
 </tr>
 </table>
 <div class="spacer_block block-5 mobile_hide" style="height:60px;line-height:60px;font-size:1px;"> </div>
 <div class="spacer_block block-6 mobile_hide" style="height:60px;line-height:60px;font-size:1px;"> </div>
-<table border="0" cellpadding="0" cellspacing="0" class="button_block block-7" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
+<table border="0" class="padding-five" cellpadding="0" cellspacing="0" class="button_block block-7" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad" style="padding-bottom:10px;padding-left:60px;padding-right:60px;padding-top:10px;text-align:left;">
-<div align="left" class="alignment"><!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:75px;width:108px;v-text-anchor:middle;" arcsize="24%" stroke="false" fillcolor="#ffffff"><w:anchorlock/><v:textbox inset="0px,5px,0px,0px"><center style="color:#94c11f; font-family:'Trebuchet MS', Tahoma, sans-serif; font-size:40px"><![endif]-->
+<div align="left" class="alignment mobile-center"><!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:75px;width:108px;v-text-anchor:middle;" arcsize="24%" stroke="false" fillcolor="#ffffff"><w:anchorlock/><v:textbox inset="0px,5px,0px,0px"><center style="color:#94c11f; font-family:'Trebuchet MS', Tahoma, sans-serif; font-size:40px"><![endif]-->
 <div style="text-decoration:none;display:inline-block;color:#94c11f;background-color:#ffffff;border-radius:18px;width:auto;border-top:0px solid transparent;font-weight:700;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:10px;padding-bottom:5px;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-size:40px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:25px;padding-right:25px;font-size:40px;display:inline-block;letter-spacing:normal;"><span style="word-break: break-word; line-height: 60px;color:#ed8d04;">5%</span></span></div><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 </div>
 </td>
@@ -147,23 +167,23 @@
 <table border="0" cellpadding="0" cellspacing="0" class="heading_block block-8" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad" style="padding-left:35px;padding-right:55px;text-align:center;width:100%;">
-<h3 style="margin: 0; color: #ffffff; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 18px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;"><span class="tinyMce-placeholder">SUR TOUT LE SITE</span></h3>
+<h3 style="margin: 0; color: #ffffff; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 18px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;" class="mobile-center"><span class="tinyMce-placeholder">SUR TOUT LE SITE</span></h3>
 </td>
 </tr>
 </table>
 <table border="0" cellpadding="0" cellspacing="0" class="button_block block-9" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad" style="padding-bottom:5px;padding-left:15px;padding-right:5px;padding-top:5px;text-align:left;">
-<div align="left" class="alignment"><!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:32px;width:203px;v-text-anchor:middle;" arcsize="32%" strokeweight="1.5pt" strokecolor="#FFFFFF" fill="false"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:'Trebuchet MS', Tahoma, sans-serif; font-size:14px"><![endif]-->
+<div align="left" class="alignment mobile-center"><!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:32px;width:203px;v-text-anchor:middle;" arcsize="32%" strokeweight="1.5pt" strokecolor="#FFFFFF" fill="false"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:'Trebuchet MS', Tahoma, sans-serif; font-size:14px"><![endif]-->
 <div style="text-decoration:none;display:inline-block;color:#ffffff;background-color:transparent;border-radius:10px;width:auto;border-top:2px solid #FFFFFF;font-weight:400;border-right:2px solid #FFFFFF;border-bottom:2px solid #FFFFFF;border-left:2px solid #FFFFFF;padding-top:0px;padding-bottom:0px;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-size:14px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:10px;padding-right:0px;font-size:14px;display:inline-block;letter-spacing:normal;"><span style="word-break: break-word; line-height: 28px;">AVEC LE CODE <strong style="color: #175a98;background-color: #ffffff;font-size: 18px;padding-left: 8px;padding-right: 8px;padding-bottom: 4px;padding-top: 4px;border-top-right-radius: 6px;border-bottom-right-radius: 6px;">HALLOWEEN</strong></span></span></div><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 </div>
 </td>
 </tr>
 </table>
-<table border="0" cellpadding="0" cellspacing="0" class="heading_block block-8" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
+<table border="0" cellpadding="0" cellspacing="0" class="heading_block block-8" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;margin-top: 8px;" width="100%">
 <tr>
 <td class="pad" style="padding-left:20px;padding-right:0px;text-align:center;width:100%;">
-<h3 style="margin: 0; color: #ffffff; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 14px; font-weight: 400; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;"><span class="tinyMce-placeholder">*Code valable jusqu'au 10/11 inclus</span></h3>
+<h3 style="margin: 0; color: #ffffff; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 14px; font-weight: 400; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;" class="mobile-center"><span class="tinyMce-placeholder">*Code valable jusqu'au 10/11 inclus</span></h3>
 </td>
 </tr>
 </table>
