--- a/theme_halloween.html
+++ b/theme_halloween.html
@@ -107,6 +107,10 @@
 			.text-top-desc{
 				font-size: 18px!important;
 			}
+
+			.text-top-orange-bg>span{
+				line-height: 30px!important;
+			}
 		}
 	</style>
 </head>
