--- a/theme_halloween.html
+++ b/theme_halloween.html
@@ -195,7 +195,7 @@
 <table border="0" cellpadding="0" cellspacing="0" class="image_block block-11" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad" style="padding-left:15px;width:100%;padding-right:0px;">
-<div align="left" class="alignment" style="line-height:10px"><img src="images/1.png" style="display: block; height: auto; border: 0; max-width: 280px; width: 100%;border-radius: 100%;border: 3px solid #FFFFFF;" width="280"/></div>
+<div align="left" class="alignment" style="line-height:10px"><img src="images/1.png" style="opacity: 0;display: block; height: auto; border: 0; max-width: 280px; width: 100%;border-radius: 100%;border: 3px solid #FFFFFF;" width="280"/></div>
 </td>
 </tr>
 </table>
