--- a/theme_halloween.html
+++ b/theme_halloween.html
@@ -131,7 +131,7 @@
 <tr>
 <td class="pad">
 <div align="center" class="alignment"><!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:51px;width:533px;v-text-anchor:middle;" arcsize="34%" stroke="false" fillcolor="#94c11f"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:'Trebuchet MS', Tahoma, sans-serif; font-size:36px"><![endif]-->
-<div style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#ec8d04;border-radius:17px;width:auto;border-top:0px solid transparent;font-weight:700;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:4px;padding-bottom:4px;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-size:36px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:40px;padding-right:40px;font-size:36px;display:inline-block;letter-spacing:normal;" class="text-top-orange-bg"><span style="word-break: break-word; line-height: 43.2px;">LE TOUT NOUVEAU SITE</span></span></div><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
+<div style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#ec8d04;border-radius:17px;width:auto;border-top:0px solid transparent;font-weight:700;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:4px;padding-bottom:4px;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-size:36px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:40px;padding-right:40px;font-size:36px;display:inline-block;letter-spacing:normal;" class="text-top-orange-bg"><span style="word-break: break-word; line-height: 43.2px;"><a href="https://www.ase-energy.com" style="text-decoration: none;color: inherit;">LE TOUT NOUVEAU SITE</a></span></span></div><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 </div>
 </td>
 </tr>
@@ -139,21 +139,21 @@
 <table border="0" cellpadding="5" cellspacing="0" class="heading_block block-2" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad">
-<h2 style="margin: 0; color: #005093; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 24px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;" class="text-top-desc"><span class="tinyMce-placeholder">ASE-ANERGY EST ARRIVE</span></h2>
+<h2 style="margin: 0; color: #005093; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 24px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;" class="text-top-desc"><span class="tinyMce-placeholder"><a href="https://www.ase-energy.com" style="text-decoration: none;color: inherit;">ASE-ANERGY EST ARRIVE</a></span></span></h2>
 </td>
 </tr>
 </table>
 <table border="0" cellpadding="0" cellspacing="0" class="heading_block block-3" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad" style="text-align:center;width:100%;">
-<h3 style="margin: 0; color: #1baae2; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 20px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;" class="text-top-desc"><span class="tinyMce-placeholder">PLUS RAPIDE, PLUS INTELLIGENT,</span></h3>
+<h3 style="margin: 0; color: #1baae2; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 20px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;" class="text-top-desc"><span class="tinyMce-placeholder"><a href="https://www.ase-energy.com" style="text-decoration: none;color: inherit;">PLUS RAPIDE, PLUS INTELLIGENT,</a></span></h3>
 </td>
 </tr>
 </table>
 <table border="0" cellpadding="0" cellspacing="0" class="heading_block block-4" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad" style="text-align:center;width:100%;">
-<h3 style="margin: 0; color: #1baae2; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 20px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;" class="text-top-desc">PLUS SOLAIRE QUE JAMAIS !</h3>
+<h3 style="margin: 0; color: #1baae2; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 20px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;" class="text-top-desc"><a href="https://www.ase-energy.com" style="text-decoration: none;color: inherit;">PLUS SOLAIRE QUE JAMAIS !</a></h3>
 </td>
 </tr>
 </table>
@@ -163,7 +163,7 @@
 <tr>
 <td class="pad" style="padding-bottom:10px;padding-left:60px;padding-right:60px;padding-top:10px;text-align:left;">
 <div align="left" class="alignment mobile-center"><!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:75px;width:108px;v-text-anchor:middle;" arcsize="24%" stroke="false" fillcolor="#ffffff"><w:anchorlock/><v:textbox inset="0px,5px,0px,0px"><center style="color:#94c11f; font-family:'Trebuchet MS', Tahoma, sans-serif; font-size:40px"><![endif]-->
-<div style="text-decoration:none;display:inline-block;color:#94c11f;background-color:#ffffff;border-radius:18px;width:auto;border-top:0px solid transparent;font-weight:700;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:10px;padding-bottom:5px;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-size:40px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:25px;padding-right:25px;font-size:40px;display:inline-block;letter-spacing:normal;"><span style="word-break: break-word; line-height: 60px;color:#ed8d04;">5%</span></span></div><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
+<div style="text-decoration:none;display:inline-block;color:#94c11f;background-color:#ffffff;border-radius:18px;width:auto;border-top:0px solid transparent;font-weight:700;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:10px;padding-bottom:5px;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-size:40px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:25px;padding-right:25px;font-size:40px;display:inline-block;letter-spacing:normal;"><span style="word-break: break-word; line-height: 60px;color:#ed8d04;"><a href="https://www.ase-energy.com" style="text-decoration: none;color: inherit;">5%</a></span></span></div><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 </div>
 </td>
 </tr>
@@ -171,7 +171,7 @@
 <table border="0" cellpadding="0" cellspacing="0" class="heading_block block-8" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad" style="padding-left:35px;padding-right:55px;text-align:center;width:100%;">
-<h3 style="margin: 0; color: #ffffff; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 18px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;" class="mobile-center"><span class="tinyMce-placeholder">SUR TOUT LE SITE</span></h3>
+<h3 style="margin: 0; color: #ffffff; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 18px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;" class="mobile-center"><span class="tinyMce-placeholder"><a href="https://www.ase-energy.com" style="text-decoration: none;color: inherit;">SUR TOUT LE SITE</a></span></h3>
 </td>
 </tr>
 </table>
