--- a/theme_halloween.html
+++ b/theme_halloween.html
@@ -139,7 +139,7 @@
 <table border="0" cellpadding="5" cellspacing="0" class="heading_block block-2" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad">
-<h2 style="margin: 0; color: #005093; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 24px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;" class="text-top-desc"><span class="tinyMce-placeholder"><a href="https://www.ase-energy.com" style="text-decoration: none;color: inherit;">ASE-ANERGY EST ARRIVE</a></span></span></h2>
+<h2 style="margin: 0; color: #005093; direction: ltr; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; font-size: 24px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: center; margin-top: 0; margin-bottom: 0;" class="text-top-desc"><span class="tinyMce-placeholder"><a href="https://www.ase-energy.com" style="text-decoration: none;color: inherit;">ASE-ENERGY EST ARRIVÉ</a></span></span></h2>
 </td>
 </tr>
 </table>
